# track2line_lib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  note.md  ready_f_ctrl.sh  ready_test_files.ps1  ready_test_files.sh
assets_for_test/assets/: 003_つくよみちゃん（れいせい）_これらの違いは引数....txt  007_つくよみちゃん（れいせい）_Tは任意の型であり....txt  008_つくよみちゃん（れいせい）_これをジェネリック....txt  009_つくよみちゃん（れいせい）_しかしこのコードは....txt  010_つくよみちゃん（れいせい）_それは、なんでもあ....txt  011_つくよみちゃん（れいせい）_これを回避するため....txt  013_つくよみちゃん（れいせい）_こうすることでなん....txt  014_つくよみちゃん（れいせい）_このstdcm....txt  015_つくよみちゃん（れいせい）_トレイトとは事前に....txt  016_つくよみちゃん（れいせい）_こうすることで、後....txt
assets_for_test/source/: 001_つくよみちゃん（れいせい）_大体90秒で分かる....txt  002_つくよみちゃん（れいせい）_ここに配列中の最大....txt  004_つくよみちゃん（れいせい）_Rustは引数の型....txt  005_つくよみちゃん（れいせい）_しかし、この2つの....txt  006_つくよみちゃん（れいせい）_そこで引数の型を一....txt  012_つくよみちゃん（れいせい）_それを保証するには....txt  017_つくよみちゃん（れいせい）_またこのトレイトで....txt  Talk1_1.txt  Talk1_10.txt  Talk1_2.txt  Talk1_3.txt  Talk1_4.txt  Talk1_5.txt  Talk1_6.txt  Talk1_7.txt  Talk1_8.txt  Talk1_9.txt  include_whs_end .txt
src/: config.rs  lib.rs  transcription.rs
src/config/: file_ctrl.rs
