[package]
name = "track2line_lib"
version = "0.9.3"
edition = "2021"

[features]
config = []
experimental = []

[dependencies]
# deepspeech = "0.9.1"
# simple_transcribe_rs = "1.0.3"
tokio = { version = "1.44.0", optional = true }
whisper-rs = { version = "0.14.2", optional = true }
rodio = { version = "0.20.1", optional = true }
# for config
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
home = "0.5.11"
